--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,11 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+.idea/.gitignore
+.idea/misc.xml
+.idea/modules.xml
+.idea/nextjs-dashboard.iml
+.idea/prettier.xml
+.idea/sqldialects.xml
+.idea/vcs.xml
+.idea/inspectionProfiles/Project_Default.xml
